[gd_scene load_steps=3 format=3 uid="uid://ddjv4cvq0bf0u"]

[ext_resource type="Script" uid="uid://cl7fwtv45fpfs" path="res://scripts/player_subtitle_overlay.gd" id="1_3h8qw"]
[ext_resource type="Texture2D" uid="uid://043bi5btelb0" path="res://icon.svg" id="2_xh0ty"]

[node name="PlayerSubtitleOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3h8qw")

[node name="PlayerPanel" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerNameBG" type="NinePatchRect" parent="PlayerPanel"]
texture_repeat = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xh0ty")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="PlayerNameLabel" type="Label" parent="PlayerPanel/PlayerNameBG"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "asdasdasdasdws"

[node name="SubtitleBG" type="NinePatchRect" parent="PlayerPanel"]
modulate = Color(1, 1, 0, 1)
texture_repeat = 2
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 80.0
texture = ExtResource("2_xh0ty")
draw_center = false
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SubtitleLabel" type="RichTextLabel" parent="PlayerPanel/SubtitleBG"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "aaaaaaaaaaaaaaaaa"
fit_content = true
scroll_active = false
autowrap_mode = 0
